chart/templates/jenkins/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/jenkins_nw: "true"
        io.kompose.service: jenkins
    spec:
      containers:
        - env:
            - name: ACCESS_KEY
            - name: FLUENTD_HOST
              value: fluentd
            - name: FLUENTD_PORT
              value: "24224"
            - name: SECRET_KEY
            - name: TENANT
              value: jenkins
          image: jenkins
          name: jenkins
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /run/secrets/jenkins-admin-password
              name: jenkins-admin-password
            - mountPath: /var/jenkins_home
              name: jenkins-home
      restartPolicy: Always
      volumes:
        - name: jenkins-admin-password
          secret:
            items:
              - key: jenkins-admin-password
                path: jenkins-admin-password
            secretName: jenkins-admin-password
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home
status: {}
