chart/templates/jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  ports:
    - name: "10000"
      port: 10000
      targetPort: 8080
  selector:
    io.kompose.service: jenkins
status:
  loadBalancer: {}
