chart/templates/jenkins/jenkins_nw-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: jenkins-nw
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/jenkins-nw: "true"
  podSelector:
    matchLabels:
      io.kompose.network/jenkins-nw: "true"
